2004-10-06  Richard Hult  <richard@imendio.com>

	* data/images/Makefile.am: Rename the mime icon for the new mime
	system, install in the right spot.
	
	* data/mime/planner.keys.in: Mark for translation, patch from
	Takao.Fujiwara@Sun.COM. Use the new name for the mime icon.

2004-10-06  Richard Hult  <richard@imendio.com>

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/mrproject2html.xsl: Tweak milestone style
	slightly and make gantt bars not wrap, fixes bug #154572.

	* libplanner/mrp-parser.c (mrp_parser_to_xml): Fix compilation
	problem on Darwin.

	* configure.in: Clean up a bit.

2004-10-05  Amanpreet Singh Alam <amanpreetalam@yahoo.com>
	
	* configure.in: Add Punjabi(pa) Lang

2004-10-05  Richard Hult  <richard@imendio.com>

	* Update copyrights.

	* src/planner-task-tree.c: (task_cmd_save_assignments),
	(task_cmd_restore_assignments), (task_cmd_save_relations),
	(task_cmd_restore_relations), (task_cmd_save_children),
	(task_cmd_move_do), (task_cmd_move_undo), (task_cmd_move_free),
	(task_cmd_move), (planner_task_tree_indent_task),
	(planner_task_tree_unindent_task),
	(planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down): Clean up undo code, remove
	debugging output and fix bug #151731, restore duration of parent
	task when undoing indent.

2004-10-04  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-view.c: (ttable_view_create_widget),
	(ttable_view_update_row_and_header_height), (idle_update_heights),
	(ttable_view_tree_style_set_cb), (ttable_view_project_loaded_cb):
	Resize header and row heights when the style changes, fixes bug
	#151602.

2004-10-04  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_open_cb): Add file filters, fixes
	bug #149357.

	* src/planner-cmd-manager.c: (cmd_manager_init),
	(cmd_manager_dump), (state_changed), (cmd_manager_free_func),
	(transaction_cmd_do), (transaction_cmd_undo),
	(planner_cmd_manager_begin_transaction),